[project]
name = "feishu-doc-mcp"
version = "0.1.0"
description = "Feishu cloud document MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0"
]

[project.scripts]
feishu-doc-mcp = "feishu_doc_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
